--- a/html/love_letter.html
+++ b/html/love_letter.html
@@ -39,51 +39,53 @@
 				<div class="modal-texts">
 					<h3>Dear Bububear,</h3>
 					<p>
-						Happy Monthsary, my love! 🌸 It feels incredible to be celebrating
-						another beautiful month with you. Each day that passes with you by
-						my side is a gift I treasure deeply. This journey we’re on together,
-						no matter how many months it has been, feels timeless, as though
-						we’ve known and loved each other forever.
+						Hi Helloooo bububear, Happy monthsarry po. Grabe ba bilis ng panahon
+						noh? dati gina kuya kuya mo pa ako ngayon "lannga", "baby", "babi",
+						"hubby", "hon", at "asawa" mo na. tanda mo pa kung paano kita nag
+						umpisa? bale gin ubra ko do rayang website ngara para katon, mga
+						highlights ag memories naton iya dah.
 						<br />
 						<br />
-						From the moment you came into my life, everything changed. The
-						ordinary became extraordinary. The mundane became magical. You’ve
-						brought light into my world in ways I didn’t even know were
-						possible. Your laughter is music to my ears, your smile my greatest
-						source of joy, and your presence my ultimate peace.
+						Pero bago ang lahat. message anay para kimo hehe. Bkn ko tigo mag
+						ubra it message ngara kaya pag tiisan mo anay. Once Again, Happy
+						Monthsarry Babi. huhu di ko expect na mag ka jowa ko makarang year.
+						naka abot pa gani kita bago mag 2025, tapos kakatapos lang naton mag
+						celebrate it atong first christmas, maskin gin away mo pa ako hehe.
 						<br />
 						<br />
-						As I sit here reflecting on all we’ve shared in just this short
-						time, I’m overwhelmed with gratitude. I think of our laughter—the
-						kind that leaves us both breathless and teary-eyed. I think of the
-						quiet moments, too, when words weren’t necessary because simply
-						being together was enough. Every moment with you is etched into my
-						heart like a beautiful song.
+						Thank you for being with me love, even though I'm not perfect
+						minahal mo parin ako at gin trato it tama. Thank you for being
+						honest sa akin sa lahat ng bagay love, appriciate ko gida nga mayad.
+						Thnak you for everything na binigay mo sakin, tulad ng gifts, I'll
+						treasure it po, nahihiya na po me palagi nalang ako gina bigyan ng
+						gifts. having you here with me and you always by my side is enough
+						na pos para sakin. I wouldn't ask for more po.
+
 						<br />
 						<br />
-						You inspire me, [Recipient's Name]. The way you tackle challenges,
-						your kindness to everyone around you, and the way you love with all
-						your heart—it amazes me. I find myself falling for you more and more
-						each day. How did I get so lucky to find someone as incredible as
-						you?
+						I know na life is not always perfect diba? meron tayo ups and downs.
+						But knowing na we have eachother, kakayanin natin bawat pasubok not
+						only in our relatiobship but sa kanya kanya natin buhay. I promise
+						to stay by your side always. Kakampi tayo eh, di natin sila bati
+						diba?
 						<br />
 						<br />
-						I know life isn’t always perfect. There are ups and downs, twists
-						and turns, and days that feel heavier than others. But knowing that
-						I have you to walk through it all with gives me strength. No matter
-						what life throws our way, I promise to stand by your side. We’re a
-						team, and together, there’s nothing we can’t conquer.
+						I want this first monthsarry natin is maging special, kase syempre
+						first monthsarry ba naman. kahit ga tipid us ngayon I know, i enjoy
+						padin natin sa makakaya natin.
 						<br />
 						<br />
-						As we celebrate this monthsary, I want to remind you how much you
-						mean to me. Thank you for your love, your patience, and your
-						unwavering support. Thank you for being my confidant, my best
-						friend, and my partner in every sense of the word. Most of all,
-						thank you for being you—the person who makes my world brighter
-						simply by being in it.
+						As we celebrate this day, I want you to know ho much I love youu po.
+						Mas mahal pa kita sa sarili ko love. i know you dont like promises
+						kaya ipapakita ko nalang sayo na hinding hindi kita iiwan tandaan mo
+						yan. I'm always here by your side. Always here to listen to your
+						rants. Always here kung kaylangan mo ako. I Love You Alot, My
+						Bububear. <3
 					</p>
 					<p>Forever Yours,,<br />Hubby <3</p>
-					<a href="/html/photo_gallery.html"><p>Close</p></a>
+					<a href="/html/photo_gallery.html" style="text-align: end"
+						><p>Proceed...</p></a
+					>
 				</div>
 			</div>
 		</div>
